# frontier-launch

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  compose.yaml  ecosystem.config.cjs  package.json
.github/workflows/: main.yml
apps/data_fetcher/: .env.example  README.md  index.ts  package.json
apps/data_fetcher/news/: config.ts  index.ts  pb.ts  scraper.ts  upload.ts
apps/docs/: .env.example  mdsvex.config.js  package.json  svelte.config.js  tailwind.config.ts
apps/docs/src/: app.html
apps/docs/src/lib/states/: index.ts  sys.svelte.ts
apps/docs/src/posts/: 0_introduction.md  1_get-started.md  2_architecture.md  deploy.md  scripts.md  template.md
apps/docs/src/posts/apps/: docs.md  exhibit.md  index.md  pb.md  web.md
apps/docs/src/routes/: +layout.svelte  +page.ts  components.ts  page_links.svelte
apps/docs/src/routes/[...slug]/: +page.svelte  +page.ts
apps/docs/src/scripts/: new-svelte-app.md
apps/exhibit/: .env.example  package.json  svelte.config.js
apps/exhibit/src/: app.css  app.html  hooks.server.ts
apps/exhibit/src/lib/server/: index.ts  server.ts
apps/exhibit/src/routes/: +layout.svelte  +server.ts
apps/pb/: package.json
apps/pb/pb_migrations/: 1728309641_created_data.js  1731501668_updated_data.js  1731503887_updated_supplies.js  1731752408_updated_supplies.js  1731771387_updated_supplies.js  1731826766_updated_supplies.js  1731918952_created_news.js  1737442061_created_cargoes_archived.js
apps/web/: .env.example  package.json  server.js  svelte.config.js
apps/web/src/: app.css  app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/: config.ts  form.ts  image.ts  localizations.ts  timer.ts
apps/web/src/lib/components/: img_btn.svelte  index.ts  nav_btn.svelte
apps/web/src/lib/server/: console.ts  index.ts  pb.ts  weather.ts  ws.ts
apps/web/src/lib/states/: input.svelte.ts  sys.svelte.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  +server.ts
apps/web/src/routes/[locale]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
apps/web/static/cargoes/: diamond.glb
apps/web/static/supplies/: cake.glb  drip.glb  spring.glb
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  makefile  typeshare.toml
backend/db/: schema.sql
backend/db/migrations/: 20250202075456_create_table_payload.sql  20250202080539_create_table_news.sql  20250202081403_update_type_payload_status.sql  20250202090306_update_table_payload.sql  20250202090911_update_table_payload.sql  20250202113745_rename_table_payload_to_cargo.sql  20250211075035_update_table_news.sql
backend/model/: Cargo.toml
backend/model/src/: cargo.rs  enums.rs  lib.rs  news.rs  util.rs  ws_msg.rs
backend/scripts/: gen_types.sh
backend/src/: config.rs  cron.rs  main.rs  routes.rs  state.rs  tls.rs  weather.rs  webdriver.rs
backend/src/handlers/: cargo.rs  mod.rs  news.rs  redirect.rs  sys_info.rs  ws.rs
backend/utils/: Cargo.toml
backend/utils/src/: db.rs  env.rs  lib.rs  runtime.rs  texture.rs
backend/web/: Cargo.toml
backend/web/src/: config.rs  cron.rs  main.rs  routes.rs  weather.rs  webdriver.rs
backend/web/src/handlers/: cargo.rs  mod.rs  news.rs  redirect.rs  sys_info.rs  ws.rs
examples/svelte-app/: .env.example  package.json  vite.config.js
examples/svelte-app/src/: app.d.ts
examples/svelte-app/src/lib/: config.ts
examples/svelte-app/src/lib/components/: holy-button.svelte  index.ts
examples/svelte-app/src/routes/: +layout.svelte  +page.svelte
frontend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  service-worker.ts
frontend/src/lib/: api.ts  config.ts  dexie.ts  time.ts  url.ts
frontend/src/lib/components/: index.ts  nav_btn.svelte
frontend/src/lib/states/: index.ts  input.svelte.ts  sys.svelte.ts
frontend/src/lib/types/: model.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/app/: +layout.svelte  +page.svelte
frontend/static/: manifest.json
frontend/static/cargoes/: stair.glb  star.glb
scripts/: new-svelte-app.ts  package.json
(+37 files in other folders)
