[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
typeshare = "1.0.4"
uuid = { version = "1.12.1", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
thirtyfour = "0.35.0"
sqlx = "0.8.3"
utils = { path = "../utils" }