[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum_typed_multipart = "0.15.1"
serde = { version = "1.0.217", features = ["derive"] }
http = "1.2.0"
serde_json = "1.0.138"
tracing = "0.1.41"
typeshare = "1.0.4"
uuid = { version = "1.13.1", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
thirtyfour = "0.35.0"
sqlx = "0.8.3"
utils = { path = "../utils" }
regex = "1.11.1"
