[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "ws"] }
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = "0.12.12"
scraper = "0.22.0"
sqlx = { version = "0.8.3", features = ["uuid", "postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
sysinfo = "0.33.1"
thirtyfour = "0.35.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.1" }
utils = { path = "../utils" }

model = { path = "../model" }
